# backend/apps/identity/admin_urls.py
@@ -9,4 +9,14 @@ urlpatterns = [
         admin_views.AdminUserStatusUpdateView.as_view(),
         name="admin-user-status-update",
     ),
+    path(
+        "admin/users/<uuid:user_id>/profile/",
+        admin_views.AdminUserProfileView.as_view(),
+        name="admin-user-profile",
+    ),
+    path(
+        "admin/users/<uuid:user_id>/avatar/",
+        admin_views.AdminUserAvatarUploadView.as_view(),
+        name="admin-user-avatar",
+    ),
 ]
